force-app/main/default/objects/OrderItem/fields/Is_Bonus_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Bonus_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bonus Item</label>
    <type>Checkbox</type>
</CustomField>