force-app/main/default/objects/OrderItem/fields/Is_Gift__c.field-meta.xml
<CustomField>
    <fullName>Is_Gift__c</fullName>
    <label>Is Gift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>