force-app/main/default/objects/OrderItem/fields/IsGift__c.field-meta.xml
<CustomField>
    <fullName>IsGift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gift</label>
    <type>Checkbox</type>
</CustomField>