force-app/main/default/objects/OrderItem/fields/Line_Item_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_External_ID__c</fullName>
    <label>Line Item External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>