force-app/main/default/objects/OrderItem/fields/Price_After_Item_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_After_Item_Discount__c</fullName>
    <label>Price After Item Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>