force-app/main/default/objects/OrderItem/fields/Shipment_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Group_Key__c</fullName>
    <label>Shipment Group Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>