force-app/main/default/objects/OrderItem/fields/Storefront_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Product_Name__c</fullName>
    <label>Storefront Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>