force-app/main/default/objects/OrderItem/fields/Tax_Basis__c.field-meta.xml
<CustomField>
    <fullName>Tax_Basis__c</fullName>
    <label>Tax Basis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>