force-app/main/default/objects/OrderItem/fields/Tax_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class_ID__c</fullName>
    <label>Tax Class ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>